--- a/10-intro-component-with-sign-up-form/index.html
+++ b/10-intro-component-with-sign-up-form/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="stylesheet" href="css/style.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>Frontend Mentor | Intro component with sign up form</title>
@@ -35,25 +35,25 @@
                         <div class="first-name-input-box">
                             <label for="first-name"></label>
                             <input type="text" name="first-name" id="first-name" placeholder="First Name">
-                            <img src="Images/icon-error.svg" alt="Error icon" class="error-icon">
+                            <img src="images/icon-error.svg" alt="Error icon" class="error-icon">
                              <p class="error-message">First Name cannot be empty</p>
                         </div>
                         <div class="last-name-input-box">
                             <label for="last-name"></label>
                             <input type="text" name="last-name" id="last-name" placeholder="Last Name">
-                            <img src="Images/icon-error.svg" alt="Error icon" class="error-icon">
+                            <img src="images/icon-error.svg" alt="Error icon" class="error-icon">
                             <p class="error-message">Last Name cannot be empty</p>
                         </div>
                         <div class="email-input-box">
                             <label for="input-email"></label>
                             <input type="text" spellcheck="false" name="input-email" id="input-email" placeholder="Email Address">
-                            <img src="Images/icon-error.svg" alt="Error icon" class="error-icon">
+                            <img src="images/icon-error.svg" alt="Error icon" class="error-icon">
                             <p class="error-message">Looks like this is not an email</p>
                         </div>
                         <div class="password-input-box">
                             <label for="password-input"></label>
                             <input type="password" name="password-input" id="password-input" placeholder="Password">
-                            <img src="Images/icon-error.svg" alt="Error icon" class="error-icon">
+                            <img src="images/icon-error.svg" alt="Error icon" class="error-icon">
                             <p class="error-message">Password cannot be empty</p>
                         </div>
                         <button class="claim-button">
@@ -74,7 +74,7 @@
     </section>
 </main>
 
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 </html>
 
