--- a/09-tip-calculator-app/index.html
+++ b/09-tip-calculator-app/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="./Images/favicon-32x32.png">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Frontend Mentor | Tip calculator app</title>
 </head>
@@ -27,7 +27,7 @@
                     </div>
                     <div class="bill-input-box">
                         <input type="number" name="bill-input" id="bill-input">
-                        <img class="input-icon" src="Images/icon-dollar.svg" alt="Dollar icon">
+                        <img class="input-icon" src="images/icon-dollar.svg" alt="Dollar icon">
                     </div>
                 </div>
 
@@ -63,7 +63,7 @@
                     </div>
                     <div class="number-input-box">
                         <input type="number" name="number-input" id="number-input">
-                        <img class="input-icon" src="Images/icon-person.svg" alt="Person logo">
+                        <img class="input-icon" src="images/icon-person.svg" alt="Person logo">
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
     </section>
 
 </main>
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 
 </html>
