--- a/12-rock-paper-scissors/index.html
+++ b/12-rock-paper-scissors/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/media-queries.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media-queries.css">
     <title>Frontend Mentor | Rock, Paper, Scissors</title>
 </head>
 <body>
 <header class="header">
     <div class="header-container">
         <div class="header-logo-container">
-            <img src="Images/logo.svg" alt="Logo image" class="heading-logo">
+            <img src="images/logo.svg" alt="Logo image" class="heading-logo">
         </div>
         <div class="score-container">
             <p class="score-text">Score</p>
@@ -35,13 +35,13 @@
     <section class="original-game-section">
         <div class="original-game-container">
             <figure class="logo-container paper-container">
-                <img src="Images/icon-paper.svg" class="paper-icon" alt="Paper icon">
+                <img src="images/icon-paper.svg" class="paper-icon" alt="Paper icon">
             </figure>
             <figure class="logo-container scissors-container">
-                <img src="Images/icon-scissors.svg" alt="Scissor icon">
+                <img src="images/icon-scissors.svg" alt="Scissor icon">
             </figure>
             <figure class="logo-container rock-container">
-                <img src="Images/icon-rock.svg" alt="Rock icon">
+                <img src="images/icon-rock.svg" alt="Rock icon">
             </figure>
         </div>
     </section>
@@ -50,23 +50,23 @@
         <div class="bonus-game-container">
             <div class="row1">
                 <figure class="logo-container scissors-container">
-                    <img src="Images/icon-scissors.svg" class="scissors-icon " alt="Scissor icon">
+                    <img src="images/icon-scissors.svg" class="scissors-icon " alt="Scissor icon">
                 </figure>
             </div>
             <div class="row2">
                 <figure class="logo-container spock-container">
-                    <img src="Images/icon-spock.svg" class="spock-icon" alt="spock-icon">
+                    <img src="images/icon-spock.svg" class="spock-icon" alt="spock-icon">
                 </figure>
                 <figure class="logo-container paper-container">
-                    <img src="Images/icon-paper.svg" class="paper-icon" alt="Paper icon">
+                    <img src="images/icon-paper.svg" class="paper-icon" alt="Paper icon">
                 </figure>
             </div>
             <div class="row3">
                 <figure class="logo-container lizard-container">
-                    <img src="Images/icon-lizard.svg" class="lizard-icon" alt="lizard icon">
+                    <img src="images/icon-lizard.svg" class="lizard-icon" alt="lizard icon">
                 </figure>
                 <figure class="logo-container rock-container">
-                    <img src="Images/icon-rock.svg" alt="Rock icon">
+                    <img src="images/icon-rock.svg" alt="Rock icon">
                 </figure>
             </div>
         </div>
@@ -76,10 +76,10 @@
         <div class="rules-content">
             <div class="rules-header">
                 <h1 class="rules-heading">Rules</h1>
-                <button class="close-icon"><img src="Images/icon-close.svg" alt="close icon"></button>
+                <button class="close-icon"><img src="images/icon-close.svg" alt="close icon"></button>
             </div>
             <figure class="rules-image-box">
-                <img src="Images/image-rules.svg" alt="Rules image" class="rules-image">
+                <img src="images/image-rules.svg" alt="Rules image" class="rules-image">
             </figure>
         </div>
         <button class="rules-button">Rules</button>
@@ -90,7 +90,7 @@
             <div class="user-pick-box">
                 <p class="pick-text">User Pick</p>
                 <figure class="logo-container user-pick-container">
-                    <img src="Images/icon-paper.svg" alt="user pick image" class="user-pick-image">
+                    <img src="images/icon-paper.svg" alt="user pick image" class="user-pick-image">
                 </figure>
             </div>
             <div class="result-box">
@@ -100,7 +100,7 @@
             <div class="computer-pick-box">
                 <p class="pick-text">The House Picked</p>
                 <figure class="logo-container computer-pick-container">
-                    <img src="Images/icon-rock.svg" alt="computer pick image" class="computer-pick-image">
+                    <img src="images/icon-rock.svg" alt="computer pick image" class="computer-pick-image">
                 </figure>
             </div>
         </div>
@@ -108,6 +108,6 @@
     <div class="overlay overlay-hidden"></div>
 </main>
 
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 </html>
