--- a/13-space-toursim-website/index.html
+++ b/13-space-toursim-website/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-    <link rel="stylesheet" href="CSS/index.css">
-    <link rel="stylesheet" href="CSS/utility-classes.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/utility-classes.css">
     <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body class="home">
 <header class="primary-header">
     <div class="logo-container">
-        <img src="Images/Icons/logo.svg" alt="Space Tourism logo" class="logo">
+        <img src="images/icons/logo.svg" alt="Space Tourism logo" class="logo">
     </div>
     <nav class="main-nav">
         <ul class="main-nav-list">
@@ -26,8 +26,8 @@
         </ul>
     </nav>
     <div class="mobile-navigation">
-        <button class="menu-button"><img src="Images/Icons/icon-hamburger.svg" class="nav-icon" alt="hamburger icon"></button>
-        <button class="close-button"><img src="Images/Icons/icon-close.svg" class="nav-icon" alt="close icon"></button>
+        <button class="menu-button"><img src="images/icons/icon-hamburger.svg" class="nav-icon" alt="hamburger icon"></button>
+        <button class="close-button"><img src="images/icons/icon-close.svg" class="nav-icon" alt="close icon"></button>
     </div>
 </header>
 
@@ -52,7 +52,7 @@
 </main>
 
 
-<script src="Javascript/navigation.js"></script>
+<script src="javascript/navigation.js"></script>
 </body>
 </html>
 
