--- a/13-space-toursim-website/technology.html
+++ b/13-space-toursim-website/technology.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
     <title>Frontend Mentor | Space tourism website</title>
-    <link rel="stylesheet" href="CSS/index.css">
-    <link rel="stylesheet" href="CSS/utility-classes.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/utility-classes.css">
 </head>
 <body class="technology">
 
 <header class="primary-header">
     <div class="logo-container">
-        <img src="Images/Icons/logo.svg" alt="Space Tourism logo" class="logo">
+        <img src="images/icons/logo.svg" alt="Space Tourism logo" class="logo">
     </div>
     <nav class="main-nav">
         <ul class="main-nav-list underline-indicators">
@@ -28,9 +28,9 @@
         </ul>
     </nav>
     <div class="mobile-navigation">
-        <button class="menu-button"><img src="Images/Icons/icon-hamburger.svg" class="nav-icon" alt="hamburger icon">
+        <button class="menu-button"><img src="images/icons/icon-hamburger.svg" class="nav-icon" alt="hamburger icon">
         </button>
-        <button class="close-button"><img src="Images/Icons/icon-close.svg" class="nav-icon" alt="close icon"></button>
+        <button class="close-button"><img src="images/icons/icon-close.svg" class="nav-icon" alt="close icon"></button>
     </div>
 </header>
 
@@ -88,15 +88,15 @@
             </div>
 
             <div class="image-container-technology">
-                <img class="landscape-image" src="Images/Technology/image-launch-vehicle-landscape.jpg" alt="Vehicle launch">
-                <img class="portrait-image" src="Images/Technology/image-launch-vehicle-portrait.jpg" alt="Vehicle launch">
+                <img class="landscape-image" src="images/technology/image-launch-vehicle-landscape.jpg" alt="Vehicle launch">
+                <img class="portrait-image" src="images/technology/image-launch-vehicle-portrait.jpg" alt="Vehicle launch">
             </div>
         </div>
     </section>
 </main>
 
-<script src="Javascript/navigation.js"></script>
-<script src="Javascript/tabs.js"></script>
+<script src="javascript/navigation.js"></script>
+<script src="javascript/tabs.js"></script>
 
 </body>
 </html>
