--- a/14-password-generator/index.html
+++ b/14-password-generator/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Frontend Mentor | Password generator app</title>
 </head>
@@ -21,7 +21,7 @@
                 <div class="copied-container flex">
                     <p class="copied-text hidden text-neon-green font-size-100 uppercase">Copied</p>
                     <button class="copy-button">
-                        <img src="Images/icon-copy.svg" class="copy-icon" alt="Copy icon">
+                        <img src="images/icon-copy.svg" class="copy-icon" alt="Copy icon">
                     </button>
                 </div>
             </div>
@@ -42,25 +42,25 @@
                     </p>
                     <div class="flex flex-align-items-center">
                         <div class="check-box upper-case-check-box flex flex-align-items-center flex-justify-content-center">
-                            <img src="Images/icon-check.svg" class="check-box-icon flex " alt="Checkbox icon">
+                            <img src="images/icon-check.svg" class="check-box-icon flex " alt="Checkbox icon">
                         </div>
                         <p class="check-box-text">Include Uppercase Letters</p>
                     </div>
                     <div class="flex flex-align-items-center">
                         <div class="check-box lower-case-check-box  flex flex-align-items-center flex-justify-content-center">
-                            <img src="Images/icon-check.svg" class="check-box-icon" alt="Checkbox icon">
+                            <img src="images/icon-check.svg" class="check-box-icon" alt="Checkbox icon">
                         </div>
                         <p class="check-box-text">Include Lowercase Letters</p>
                     </div>
                     <div class="flex flex-align-items-center">
                         <div class="check-box include-numbers-check-box flex flex-align-items-center flex-justify-content-center">
-                            <img src="Images/icon-check.svg" class="check-box-icon" alt="Checkbox icon">
+                            <img src="images/icon-check.svg" class="check-box-icon" alt="Checkbox icon">
                         </div>
                         <p class="check-box-text">Include Numbers</p>
                     </div>
                     <div class="flex flex-align-items-center">
                         <div class="check-box include-symbols-check-box flex flex-align-items-center flex-justify-content-center">
-                            <img src="Images/icon-check.svg" class="check-box-icon" alt="Checkbox icon">
+                            <img src="images/icon-check.svg" class="check-box-icon" alt="Checkbox icon">
                         </div>
                         <p class="check-box-text">Include Symbols</p>
                     </div>
@@ -89,7 +89,7 @@
     </section>
 </main>
 
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 </html>
 
