--- a/15 - Designo Multi Page Website/contact.html
+++ b/15 - Designo Multi Page Website/contact.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/utility-classes.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utility-classes.css">
 
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
@@ -16,7 +16,7 @@
 <header class="main-header">
     <div class="container header-container flex flex-justify-space-between flex-align-items-center">
         <a href="index.html" class="logo-container">
-            <img src="Images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
+            <img src="images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
         </a>
 
         <nav class="main-nav">
@@ -63,7 +63,7 @@
                     </label>
                     <div class="error flex flex-gap">
                         <p class="error-message text-color-white">Name can't be empty</p>
-                        <img src="Images/contact/desktop/icon-error.svg" class="error-icon" alt="Error icon">
+                        <img src="images/contact/desktop/icon-error.svg" class="error-icon" alt="Error icon">
                     </div>
                 </div>
 
@@ -74,7 +74,7 @@
                     </label>
                     <div class="error flex flex-gap">
                         <p class="error-message text-color-white">Enter a valid email</p>
-                        <img src="Images/contact/desktop/icon-error.svg" class="error-icon" alt="Error icon">
+                        <img src="images/contact/desktop/icon-error.svg" class="error-icon" alt="Error icon">
                     </div>
                 </div>
 
@@ -85,7 +85,7 @@
                     </label>
                     <div class="error flex flex-gap">
                         <p class="error-message text-color-white">Phone number can't be empty</p>
-                        <img src="Images/contact/desktop/icon-error.svg" class="error-icon" alt="Error icon">
+                        <img src="images/contact/desktop/icon-error.svg" class="error-icon" alt="Error icon">
                     </div>
                 </div>
 
@@ -96,7 +96,7 @@
                     </label>
                     <div class="error flex flex-gap">
                         <p class="error-message text-color-white">Message can't be empty</p>
-                        <img src="Images/contact/desktop/icon-error.svg" class="error-icon" alt="Error icon">
+                        <img src="images/contact/desktop/icon-error.svg" class="error-icon" alt="Error icon">
                     </div>
                 </div>
 
@@ -114,7 +114,7 @@
 
         <div class="location flex flex-direction-column flex-align-items-center">
             <div class="image-container">
-                <img src="Images/shared/desktop/illustration-canada.svg" alt="Canada illustration">
+                <img src="images/shared/desktop/illustration-canada.svg" alt="Canada illustration">
             </div>
             <div class="text-box grid grid-place-items-center text-align-center">
                 <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
@@ -128,7 +128,7 @@
 
         <div class="location flex flex-direction-column flex-align-items-center">
             <div class="image-container">
-                <img src="Images/shared/desktop/illustration-australia.svg" alt="Australia illustration">
+                <img src="images/shared/desktop/illustration-australia.svg" alt="Australia illustration">
             </div>
             <div class="text-box grid grid-place-items-center text-align-center">
                 <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
@@ -142,7 +142,7 @@
 
         <div class="location flex flex-direction-column flex-align-items-center">
             <div class="image-container">
-                <img src="Images/shared/desktop/illustration-united-kingdom.svg" alt="United Kingdom illustration">
+                <img src="images/shared/desktop/illustration-united-kingdom.svg" alt="United Kingdom illustration">
             </div>
             <div class="text-box grid grid-place-items-center text-align-center">
                 <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
@@ -183,7 +183,7 @@
     <div class="container footer-container">
         <div class="footer-logo-container">
             <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img
-                    src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
+                    src="images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
         </div>
 
         <nav class="footer-nav">
@@ -235,7 +235,7 @@
     </div>
 </footer>
 <div class="overlay hidden"></div>
-<script src="Javascript/script.js"></script>
-<script src="Javascript/form-validation.js"></script>
+<script src="javascript/script.js"></script>
+<script src="javascript/form-validation.js"></script>
 </body>
 </html>
