--- a/15 - Designo Multi Page Website/web-design.html
+++ b/15 - Designo Multi Page Website/web-design.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/utility-classes.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utility-classes.css">
 
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
@@ -16,7 +16,7 @@
 <header class="main-header">
     <div class="container header-container flex flex-justify-space-between flex-align-items-center">
         <a href="index.html" class="logo-container">
-            <img src="Images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
+            <img src="images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
         </a>
 
         <nav class="main-nav">
@@ -54,7 +54,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/web-design/desktop/image-express.jpg" class="project-picture" alt="Express website">
+                    <img src="images/web-design/desktop/image-express.jpg" class="project-picture" alt="Express website">
                 </div>
                 <div class="project-text-box text-align-center flow">
                     <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
@@ -68,7 +68,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/web-design/desktop/image-transfer.jpg" class="project-picture" alt="Transfer website">
+                    <img src="images/web-design/desktop/image-transfer.jpg" class="project-picture" alt="Transfer website">
                 </div>
                 <div class="project-text-box text-align-center flow">
                     <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
@@ -82,7 +82,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/web-design/desktop/image-photon.jpg" class="project-picture" alt="Photon website">
+                    <img src="images/web-design/desktop/image-photon.jpg" class="project-picture" alt="Photon website">
                 </div>
                 <div class="project-text-box text-align-center flow">
                     <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
@@ -96,7 +96,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/web-design/desktop/image-builder.jpg" class="project-picture" alt="Builder website">
+                    <img src="images/web-design/desktop/image-builder.jpg" class="project-picture" alt="Builder website">
                 </div>
                 <div class="project-text-box text-align-center flow">
                     <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
@@ -110,7 +110,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/web-design/desktop/image-blogr.jpg" class="project-picture" alt="Blogger website">
+                    <img src="images/web-design/desktop/image-blogr.jpg" class="project-picture" alt="Blogger website">
                 </div>
                 <div class="project-text-box text-align-center flow">
                     <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
@@ -124,7 +124,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/web-design/desktop/image-camp.jpg" class="project-picture" alt="Camp website">
+                    <img src="images/web-design/desktop/image-camp.jpg" class="project-picture" alt="Camp website">
                 </div>
                 <div class="project-text-box text-align-center flow">
                     <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
@@ -187,7 +187,7 @@
 
     <div class="container footer-container">
         <div class="footer-logo-container">
-            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
+            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
         </div>
 
         <nav class="footer-nav">
@@ -227,7 +227,7 @@
 </footer>
 
 <div class="overlay hidden"></div>
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 
 </body>
 </html>
