--- a/15 - Designo Multi Page Website/about.html
+++ b/15 - Designo Multi Page Website/about.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/utility-classes.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utility-classes.css">
 
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
@@ -17,7 +17,7 @@
 <header class="main-header">
     <div class="container header-container flex flex-justify-space-between flex-align-items-center">
         <a href="index.html" class="logo-container">
-            <img src="Images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
+            <img src="images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
         </a>
 
         <nav class="main-nav">
@@ -84,7 +84,7 @@
 
         <div class="location flex flex-direction-column flex-align-items-center">
             <div class="image-container">
-                <img src="Images/shared/desktop/illustration-canada.svg" alt="Canada illustration">
+                <img src="images/shared/desktop/illustration-canada.svg" alt="Canada illustration">
             </div>
             <div class="text-box grid grid-place-items-center text-align-center">
                 <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
@@ -98,7 +98,7 @@
 
         <div class="location flex flex-direction-column flex-align-items-center">
             <div class="image-container">
-                <img src="Images/shared/desktop/illustration-australia.svg" alt="Australia illustration">
+                <img src="images/shared/desktop/illustration-australia.svg" alt="Australia illustration">
             </div>
             <div class="text-box grid grid-place-items-center text-align-center">
                 <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
@@ -112,7 +112,7 @@
 
         <div class="location flex flex-direction-column flex-align-items-center">
             <div class="image-container">
-                <img src="Images/shared/desktop/illustration-united-kingdom.svg" alt="United Kingdom illustration">
+                <img src="images/shared/desktop/illustration-united-kingdom.svg" alt="United Kingdom illustration">
             </div>
             <div class="text-box grid grid-place-items-center text-align-center">
                 <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
@@ -168,7 +168,7 @@
 
     <div class="container footer-container">
         <div class="footer-logo-container">
-            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
+            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
         </div>
 
         <nav class="footer-nav">
@@ -208,7 +208,7 @@
 </footer>
 
 <div class="overlay hidden"></div>
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 
 </body>
 </html>
