--- a/15 - Designo Multi Page Website/app-design.html
+++ b/15 - Designo Multi Page Website/app-design.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/utility-classes.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utility-classes.css">
 
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
@@ -16,7 +16,7 @@
 <header class="main-header">
     <div class="container header-container flex flex-justify-space-between flex-align-items-center">
         <a href="index.html" class="logo-container">
-            <img src="Images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
+            <img src="images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
         </a>
 
         <nav class="main-nav">
@@ -54,7 +54,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/app-design/desktop/image-airfilter.jpg" class="project-picture"
+                    <img src="images/app-design/desktop/image-airfilter.jpg" class="project-picture"
                          alt="Airfilter app">
                 </div>
                 <div class="project-text-box text-align-center flow">
@@ -69,7 +69,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/app-design/desktop/image-eyecam.jpg" class="project-picture"
+                    <img src="images/app-design/desktop/image-eyecam.jpg" class="project-picture"
                          alt="Eyecam App">
                 </div>
                 <div class="project-text-box text-align-center flow">
@@ -84,7 +84,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/app-design/desktop/image-faceit.jpg" class="project-picture"
+                    <img src="images/app-design/desktop/image-faceit.jpg" class="project-picture"
                          alt="Faceit App">
                 </div>
                 <div class="project-text-box text-align-center flow">
@@ -100,7 +100,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/app-design/desktop/image-todo.jpg" class="project-picture"
+                    <img src="images/app-design/desktop/image-todo.jpg" class="project-picture"
                          alt="Todo App">
                 </div>
                 <div class="project-text-box text-align-center flow">
@@ -115,7 +115,7 @@
 
             <div class="project background-very-light-peach">
                 <div class="image-container">
-                    <img src="Images/app-design/desktop/image-loopstudios.jpg" class="project-picture"
+                    <img src="images/app-design/desktop/image-loopstudios.jpg" class="project-picture"
                          alt="Loopstudios App">
                 </div>
                 <div class="project-text-box text-align-center flow">
@@ -179,7 +179,7 @@
 
     <div class="container footer-container">
         <div class="footer-logo-container">
-            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
+            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
         </div>
 
         <nav class="footer-nav">
@@ -219,6 +219,6 @@
 </footer>
 
 <div class="overlay hidden"></div>
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 </html>
