--- a/15 - Designo Multi Page Website/index.html
+++ b/15 - Designo Multi Page Website/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/utility-classes.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utility-classes.css">
 
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
@@ -16,7 +16,7 @@
 <header class="main-header">
     <div class="container header-container flex flex-justify-space-between flex-align-items-center">
         <a href="index.html" class="logo-container">
-            <img src="Images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
+            <img src="images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
         </a>
 
         <nav class="main-nav">
@@ -54,7 +54,7 @@
                 </a>
             </div>
             <div class="hero-image-box">
-                <img src="Images/home/desktop/image-hero-phone.png" class="hero-image" alt="hero-image">
+                <img src="images/home/desktop/image-hero-phone.png" class="hero-image" alt="hero-image">
             </div>
         </div>
     </section>
@@ -95,7 +95,7 @@
         <div class="container advantage-container grid grid--3-columns">
             <div class="advantage grid">
                 <div class="advantage-image-container">
-                    <img src="Images/home/desktop/illustration-passionate.svg" alt="Designo advantage">
+                    <img src="images/home/desktop/illustration-passionate.svg" alt="Designo advantage">
                 </div>
                 <div class="advantages-text flow">
                     <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-2">
@@ -111,7 +111,7 @@
 
             <div class="advantage grid">
                 <div class="advantage-image-container">
-                    <img src="Images/home/desktop/illustration-resourceful.svg" alt="Designo advantage">
+                    <img src="images/home/desktop/illustration-resourceful.svg" alt="Designo advantage">
                 </div>
                 <div class="advantages-text flow">
                     <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-2">
@@ -127,7 +127,7 @@
 
             <div class="advantage grid">
                 <div class="advantage-image-container">
-                    <img src="Images/home/desktop/illustration-friendly.svg" alt="Designo advantage">
+                    <img src="images/home/desktop/illustration-friendly.svg" alt="Designo advantage">
                 </div>
                 <div class="advantages-text flow">
                     <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-2">
@@ -168,7 +168,7 @@
 
     <div class="container footer-container">
         <div class="footer-logo-container">
-            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
+            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
         </div>
 
         <nav class="footer-nav">
@@ -208,7 +208,7 @@
 </footer>
 
 <div class="overlay hidden"></div>
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 </html>
 
