--- a/15 - Designo Multi Page Website/locations.html
+++ b/15 - Designo Multi Page Website/locations.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/utility-classes.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utility-classes.css">
 
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
@@ -17,7 +17,7 @@
 <header class="main-header">
     <div class="container header-container flex flex-justify-space-between flex-align-items-center">
         <a href="index.html" class="logo-container">
-            <img src="Images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
+            <img src="images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
         </a>
 
         <nav class="main-nav">
@@ -141,7 +141,7 @@
     <div class="container footer-container">
         <div class="footer-logo-container">
             <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img
-                    src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
+                    src="images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
         </div>
 
         <nav class="footer-nav">
@@ -194,7 +194,7 @@
 </footer>
 
 <div class="overlay hidden"></div>
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 
 </body>
 </html>
