--- a/16 - Calculator App/index.html
+++ b/16 - Calculator App/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="stylesheet" href="css/style.css">
     <title>Frontend Mentor | Calculator app</title>
 
 </head>
@@ -74,6 +74,6 @@
     </section>
 </main>
 
-<script src="Javascript/script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 </html>
