--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Frontend Mentor | Tic Tac Toe</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utility.css">
+    <title>Frontend Mentor | Tic Tac Toe</title>
 </head>
 <body>
+
+<main>
+    <section class="choice-selection-section">
+        <div class="container">
+            <div class="logo-container">
+                <img src="images/logo.svg" alt="Logo">
+            </div>
+            <div class="mark-selection-wrapper background-semi-dark-navy">
+                <p class="mark-selection__text font-size-200 text-color-silver uppercase font-weight-bold">
+                    Pick player 1's mark
+                </p>
+                <div class="mark-selection">
+                    <img src="images/icon-x.svg" alt="x icon">
+                    <img src="images/icon-o.svg" alt="o icon">
+                </div>
+                <p class="mark-selection__text font-size-100 text-color-silver uppercase">
+                    Remember: X goes first
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="game-section">
+        <div class="container game-container grid grid-3-columns">
+
+        </div>
+    </section>
+</main>
 
 
 <script src="javascript/script.js"></script>
