--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -57,23 +57,22 @@
                 </button>
             </header>
             <div class="game__wrapper grid grid-3-columns">
-                <div><img src="images/icon-x.svg" alt="Icon x"></div>
-                <div><img src="images/icon-x.svg" alt="Icon x"></div>
-                <div><img src="images/icon-x.svg" alt="Icon x"></div>
-                <div><img src="images/icon-x.svg" alt="Icon x"></div>
-                <div><img src="images/icon-x.svg" alt="Icon x"></div>
-                <div><img src="images/icon-x.svg" alt="Icon x"></div>
-                <div><img src="images/icon-x.svg" alt="Icon x"></div>
-                <div><img src="images/icon-x.svg" alt="Icon x"></div>
-                <div><img src="images/icon-x.svg" alt="Icon x"></div>
+                <button class="choice-button"></button>
+                <button class="choice-button"></button>
+                <button class="choice-button"></button>
+                <button class="choice-button"></button>
+                <button class="choice-button"></button>
+                <button class="choice-button"></button>
+                <button class="choice-button"></button>
+                <button class="choice-button"></button>
+                <button class="choice-button"></button>
             </div>
         </div>
     </section>
 </main>
 
 
-<script src="javascript/choice-selection.js"></script>
-<script src="javascript/game.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 </html>
 
