--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -57,21 +57,25 @@
                 </button>
             </header>
             <div class="game__wrapper grid grid-3-columns">
-                <button class="choice-button"></button>
-                <button class="choice-button"></button>
-                <button class="choice-button"></button>
-                <button class="choice-button"></button>
-                <button class="choice-button"></button>
-                <button class="choice-button"></button>
-                <button class="choice-button"></button>
-                <button class="choice-button"></button>
-                <button class="choice-button"></button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
             </div>
         </div>
     </section>
 </main>
 
-
+<section class="game-finished-section">
+    <div class="container">
+        <p class="result">You Winnnnn</p>
+    </div>
+</section>
 <script src="javascript/script.js"></script>
 </body>
 </html>
