--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -73,7 +73,7 @@
 
 <section class="game-finished-section">
     <div class="container">
-        <p class="result">You Winnnnn</p>
+        <p class="result text-color-silver">You Winnnnn</p>
     </div>
 </section>
 <script src="javascript/script.js"></script>
